--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - Index welcome </title>
+  <title>WEB1 - HTML </title>
   <meta charset="utf-8">
 </head>
 <body>
-    <h1>WEB</h1>
+    <h1><a href="index.html">WEB</a></h1>
 <ol>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
+  <li><a href="1.html">HTML</a></li>
+  <li><a href="2.html">CSS</a></li>
+  <li><a href="3.html">JavaScript</a></li>
 </ol>
-<h2>Welcome WEB~</h2>
-lalalalalalalal
+<h2>우성옥입니다.</h2>
+<strong>Hello This is Seong Ok.</strong> <u>Welcome to my channel~</u><br><br>
+<a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification">There's nothing to tell he just some guy I work with.</a>
+Hey you guys! Look!<br>
+<img src="앙금.jpg" width="50%">
+<p style="margin-top:45px;">html new line tag
+Come on you are going out with the guy there's gotta be a something wrong with him!</p>
+So does he have a hump? a hump and a hairpiece?
 </body>
 </html>
